# SDL2Game

./: CMakeLists.txt  bnr.bat  main1.cpp  run.bat
include/: Camera.h  Game.h  LButton.h  LTexture.h  Shader.h
src/: Camera.cpp  Game.cpp  LButton.cpp  LTexture.cpp  Shader.cpp  main.cpp
unix/: build.sh  make.sh  run.sh
win/: bnr.bat  build.bat  make.bat  run.bat
